--- a/crypto_portfolio_optimization.ipynb
+++ b/crypto_portfolio_optimization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN0K3xWIsmItLDOTT+m3yyF"
+      "authorship_tag": "ABX9TyMaNVUFibipZCJaDjJdYfCf"
     },
     "kernelspec": {
       "name": "python3",
@@ -1740,7 +1740,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Insights Visualization"
+        "# Insights Visualization\n",
+        "\n",
+        "This section is preliminary implementation of portfolio backtesting"
       ],
       "metadata": {
         "id": "n4IZifMrkP50"
@@ -1914,7 +1916,9 @@
         "\n",
         "[Sharpe Ratio](https://www.investopedia.com/terms/s/sharperatio.asp)\n",
         "\n",
-        "[Mean-variance Optimization](https://www.investopedia.com/terms/m/meanvariance-analysis.asp)"
+        "[Mean-variance Optimization](https://www.investopedia.com/terms/m/meanvariance-analysis.asp)\n",
+        "\n",
+        "[Backtesting](https://gist.github.com/jatinkathiriya/ca9063711316d9b7c3cbd993b8c6656b#file-portfolio-backtesting-ipynb)"
       ],
       "metadata": {
         "id": "1pdut3ZeOQy3"
