--- a/crypto_portfolio_optimization.ipynb
+++ b/crypto_portfolio_optimization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM/0CpwDAgB/50bxqBtH2r3"
+      "authorship_tag": "ABX9TyOV5KLm78hNpWIoFyandQfl"
     },
     "kernelspec": {
       "name": "python3",
@@ -3126,57 +3126,21 @@
     {
       "cell_type": "code",
       "source": [
-        "# Template\n",
-        "# https://streamlit-example-app-download-app-lk16x1.streamlit.app/\n",
-        "# https://github.com/damianboh/portfolio_optimization/blob/main/portfolio_optimization_streamlit/app.py\n",
-        "\n",
-        "# Design\n",
-        "\"\"\"\n",
-        "Title [CryptoPortOpt] AKA Crypto Currencies Porfolio' Optimizer\n",
-        "\n",
-        "Step1: Select Your Porfolio\n",
-        "  -> The user will be provider with a list of  10 most popular\n",
-        "  crypto by market cap\n",
-        "\n",
-        "Step2:\n",
-        "  -> Optimization Horizon\n",
-        "  From {starting date => default '2020-01-01'} to {ending date => default 'date.time.now()'}\n",
-        "\n",
-        "Step3: Budget(Optional)\n",
-        "  ->  Default to 1000 USA for Porfolio Performation visualizations\n",
-        "\n",
-        "Step3: Risk Free Market\n",
-        "  -> Try FED, else ==> 3%\n",
-        "\n",
-        "Step4: Optimize using MVO/PyPortOpt\n",
-        "  -> Maximize Sharpe Ratio\n",
-        "\n",
-        "Step4: Results/Visualisation/Benchmark\n",
-        "  -> Asset Optimized Allocations\n",
-        "  -> Portfolio Performance (Gain/Loss)\n",
-        "\"\"\""
-      ],
-      "metadata": {
-        "id": "3mnYJH5AvmsV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# modules required to run the App\n",
         "%%writefile requirements.txt\n",
         "pandas\n",
         "matplotlib\n",
-        "seaborn\n",
         "numpy\n",
         "yfinance\n",
         "yahooquery\n",
         "requests\n",
         "requests_html\n",
         "datetime\n",
-        "pypfopt"
+        "PyPortfolioOpt\n",
+        "pypfopt\n",
+        "altair\n",
+        "plotly\n",
+        "streamlit"
       ],
       "metadata": {
         "id": "3YcP9WKXse-P"
@@ -3187,14 +3151,14 @@
     {
       "cell_type": "code",
       "source": [
+        "# application main source code\n",
         "%%writefile app.py\n",
         "# modules imports\n",
         "import streamlit as st\n",
         "import altair as alt\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import plotly.graph_objects as go\n",
-        "import seaborn as sns\n",
+        "import plotly.express as px\n",
         "import numpy as np\n",
         "import yfinance as yf\n",
         "from yahooquery import Screener\n",
@@ -3204,14 +3168,12 @@
         "from pypfopt.expected_returns import mean_historical_return\n",
         "from pypfopt.risk_models import CovarianceShrinkage\n",
         "from pypfopt.efficient_frontier import EfficientFrontier\n",
-        "from pypfopt import plotting as pt\n",
         "\n",
         "# Helper functions\n",
         "\n",
-        "\n",
         "def tickers_list():\n",
         "    '''\n",
-        "    generate 10 most popular cryto currencies tickers\n",
+        "    Generate 10 most popular cryto currencies tickers\n",
         "    '''\n",
         "    session = HTMLSession()\n",
         "    num_currencies=10\n",
@@ -3271,7 +3233,7 @@
         "## Optimized Ratios pieplot\n",
         "def pie_plot(data):\n",
         "    '''\n",
-        "    Pie Plot of the optimized ratios of selected tickers\n",
+        "    Pie Plot of the calculated ratios of selected tickers\n",
         "    '''\n",
         "    pie_fig = alt.Chart(data).mark_arc().encode(\n",
         "         theta=alt.Theta(field=\"Ratio\", type=\"quantitative\"),\n",
@@ -3283,45 +3245,47 @@
         "    return pie_fig\n",
         "\n",
         "## func lineplot daily&cumul_daily returns in %\n",
-        "# > with logaritmic scaling.\n",
-        "# def plot_ret(returns, type):\n",
-        "#     '''\n",
-        "#     Plot the line plot of calculated portfolio returns\n",
-        "#     '''\n",
-        "#     axis_scale = 'linear'\n",
-        "#     if st.checkbox(\"View logarithmic scale\"):\n",
-        "#         axis_scale = \"log\"\n",
-        "\n",
-        "#     return alt.Chart(returns).mark_line().encode(\n",
-        "#         x=alt.X(''),\n",
-        "#         color=alt.Color(field='', type='nominal')).interactive()\n",
+        "def plot_ret(returns):\n",
+        "    '''\n",
+        "    generate a line plot of calculated returns in %\n",
+        "    '''\n",
+        "    fig = px.line(returns*100).update_layout(\n",
+        "        yaxis_title='%',\n",
+        "        xaxis_title='Date',\n",
+        "        legend_title_text='Returns',\n",
+        "        legend=dict(\n",
+        "        orientation=\"h\", \n",
+        "        entrywidth=170, \n",
+        "        yanchor=\"middle\", \n",
+        "        y=1.3, \n",
+        "        xanchor=\"center\", \n",
+        "        x=0.5\n",
+        "    ))\n",
+        "    return fig\n",
         "\n",
         "\n",
         "# Benchmark Section\n",
-        "## Cumulative Revenus Comparaison plot in %\n",
-        "# '''\n",
-        "# func generate \n",
-        "#     - cumul_daily return for equi_ratio_portfolio\n",
-        "#     - func lineplot cumul_daily return for optimized_port vs equi_ratio_portfolio\n",
-        "# '''\n",
-        "## Cumulative Revenues Comparaison to end_date\n",
+        "# Cumulative Revenues Comparaison to end_date\n",
         "def h_bar(opt_rslts, ben_rslts):\n",
         "    '''\n",
-        "     Plot a horizontal bar plot of the investement cumulative gain/loss\n",
+        "     Plot a horizontal bar plot of the investment cumulative gain/loss\n",
         "     of optimized and benchmark porfolio.\n",
         "    '''\n",
-        "    bar = pd.DataFrame(zip([opt_rslts, ben_rslts],['Optimized', 'Benchmark']), \n",
-        "                        columns=['Investements Results','Scenarios'])\n",
+        "    bar = pd.DataFrame(zip([opt_rslts, ben_rslts],['Optimized', 'Equally-weighted']), \n",
+        "                        columns=['Investments Results','Scenarios'])\n",
         "    return alt.Chart(bar).mark_bar().encode(\n",
-        "        x='Investements Results:Q',\n",
+        "        x='Investments Results:Q',\n",
         "        y='Scenarios:O',\n",
-        "        color=alt.Color(field=\"Scenarios\", type=\"nominal\")\n",
+        "        color=alt.Color(field=\"Scenarios\", type=\"nominal\", legend=None)\n",
         "    )\n",
         "\n",
         "def app_exec():\n",
+        "    '''\n",
+        "    main application function\n",
+        "    '''\n",
         "\n",
         "    #Application Title\n",
-        "    st.set_page_config(page_title = \"Crypto Fire\")\n",
+        "    st.set_page_config(page_title = \"Crypto Fire!\")\n",
         "    st.title(\"Crypto-Currency Portfolio Optimizer\")\n",
         "\n",
         "    #Sub_Title_1 # Portfolio Main Parameters\n",
@@ -3355,7 +3319,7 @@
         "                                     value= fed_rate())\n",
         "\n",
         "    # Initial Investement\n",
-        "    initial_invest = st.number_input('What is your initial investement? (USD)',\n",
+        "    initial_invest = st.number_input('What is your initial investment? (USD)',\n",
         "                                     min_value= 1.00,\n",
         "                                     max_value= None,\n",
         "                                     value= 1000.00)\n",
@@ -3364,39 +3328,51 @@
         "    data = get_data(selected_tickers, start_date, end_date)\n",
         "    returns = data.pct_change()[1:]\n",
         "    opt_ratio = optimized_ratios(data, start_date, end_date, safe)\n",
-        "    opt_d_ret = (opt_ratio * returns).sum(axis= 1)\n",
-        "    opt_c_ret = (1+ opt_d_ret).cumprod()\n",
+        "    opt_d_ret = pd.Series((opt_ratio * returns).sum(axis= 1), name='Optimized Daily Returns')\n",
+        "    opt_c_ret = pd.Series((1+ opt_d_ret).cumprod()-1, name='Optimized Cumulative Returns')\n",
         "    ben_ratio = [(1/len(selected_tickers)) for i in selected_tickers]\n",
-        "    ben_d_ret = (ben_ratio * returns).sum(axis= 1)\n",
-        "    ben_c_ret = (1+ ben_d_ret).cumprod()\n",
+        "    ben_d_ret = pd.Series((ben_ratio * returns).sum(axis= 1), name='Equally-weighted Daily Returns')\n",
+        "    ben_c_ret = pd.Series((1+ ben_d_ret).cumprod()-1, name='Equally-weighted Cumulative Return')\n",
+        "    mer_d_ret = pd.concat((opt_d_ret, ben_d_ret), join='inner',axis=1)\n",
+        "    mer_c_ret = pd.concat((opt_c_ret, ben_c_ret), join='inner',axis=1)\n",
         "    opt_rslts = round(opt_c_ret[-1] * initial_invest, 2)\n",
         "    ben_rslts = round(ben_c_ret[-1] * initial_invest, 2)\n",
         "\n",
         "    # Sub_Title_2 # Optimization Results\n",
         "    if st.button('Optimus Cryptus! :fire:'):\n",
         "        st.header('Optimization Results')\n",
-        "        source = pd.DataFrame(zip(selected_tickers, opt_ratio),\n",
-        "                              columns=['Tickers', 'Ratio'])\n",
-        "        \n",
-        "        st.markdown('Optimized Ratios')\n",
-        "        st.altair_chart(pie_plot(source),\n",
-        "                        theme = 'streamlit',\n",
-        "                        use_container_width=True)\n",
-        "        \n",
-        "        st.markdown('Optimized Returns')\n",
+        "        col3, col4 = st.columns(2)\n",
+        "        with col3:    \n",
+        "            source = pd.DataFrame(zip(selected_tickers, opt_ratio),\n",
+        "                                columns=['Tickers', 'Ratio'])\n",
+        "            \n",
+        "            st.markdown('Optimized Portfolio')\n",
+        "            st.altair_chart(pie_plot(source),\n",
+        "                            theme = 'streamlit',\n",
+        "                            use_container_width=True)\n",
+        "        with col4:\n",
+        "            source = pd.DataFrame(zip(selected_tickers, ben_ratio),\n",
+        "                                  columns=['Tickers', 'Ratio'])\n",
+        "            \n",
+        "            st.markdown('Equally-weighted Portfolio')\n",
+        "            st.altair_chart(pie_plot(source),\n",
+        "                            theme = 'streamlit',\n",
+        "                            use_container_width=True)\n",
+        "            \n",
+        "        st.markdown('Optimized vs Equally-weighted Portfolio Returns')\n",
         "        tab1, tab2 = st.tabs(['Daily Returns in %',\n",
         "                              'Cumulative Daily Returns in %'])\n",
-        "        # with tab1:\n",
-        "        #      st.altair_chart(plot_ret(opt_d_ret), \n",
-        "        #      theme='streamlit',\n",
-        "        #      use_container_width= True)\n",
-        "        # with tab2:\n",
-        "        #      st.altair_chart(plot_ret(opt_c_ret),\n",
-        "        #                       theme='streamlit', \n",
-        "        #                       use_container_width= True)\n",
-        "        st.markdown('Compare Returns with Benchmark Portfolio')\n",
+        "        with tab1:\n",
+        "             st.plotly_chart(plot_ret(mer_d_ret),\n",
+        "                             theme='streamlit',\n",
+        "                             use_container_width=True)\n",
         "\n",
-        "        st.markdown(f'Total Gain/Loss for each Portfolio given intial investement of {initial_invest} USD')\n",
+        "        with tab2:\n",
+        "             st.plotly_chart(plot_ret(mer_c_ret),\n",
+        "                             theme='streamlit',\n",
+        "                             use_container_width=True)\n",
+        "\n",
+        "        st.markdown(f'Total Performance of each Portfolio given initial investment of USD {initial_invest}:')\n",
         "        st.altair_chart(h_bar(opt_rslts, ben_rslts),\n",
         "                       theme='streamlit',\n",
         "                       use_container_width=True)\n",
@@ -3421,11 +3397,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Beyond the App\n",
-        "- Portfolio builder App"
+        "In the crypto market mayhem, the hight volatility seems to --kill every forcasting strategy in literature so far, thought the Portfolio Optimization techniques come to ease the impact of severe fluctuation on the Portfolio Returns On Investments.\n",
+        "\n",
+        "This exercise was an opportunity to implements this strategy that seems profitable in such crazy moved market even if this app can benefit from some further & additionnal features such as:\n",
+        "\n",
+        "- Automatization of Asset choice given:\n",
+        "\n",
+        "  * Initial Investment\n",
+        "  * Investment horizon\n",
+        "  * Competing market parameters (Interest rate...)\n",
+        "\n",
+        "- Including insights from forcasting methods of:\n",
+        "\n",
+        "  * Macro economic data\n",
+        "  * Trading market index (S&P500 and more...)"
       ],
       "metadata": {
         "id": "wNjdpHwXG5nh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I'd be glade to [receive](mohamed.mzaouali@gmail.com) your impressions on this work."
+      ],
+      "metadata": {
+        "id": "ID39PmfyXbxQ"
       }
     },
     {
