--- a/crypto_portfolio_optimization.ipynb
+++ b/crypto_portfolio_optimization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOV5KLm78hNpWIoFyandQfl"
+      "authorship_tag": "ABX9TyPHT9QtNdAesqU4qxwbczyA"
     },
     "kernelspec": {
       "name": "python3",
@@ -3397,20 +3397,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In the crypto market mayhem, the hight volatility seems to --kill every forcasting strategy in literature so far, thought the Portfolio Optimization techniques come to ease the impact of severe fluctuation on the Portfolio Returns On Investments.\n",
+        "In the crypto market mayhem, the hight volatility seems to obliterate every predictive-based insights so far, though the Portfolio Optimization techniques come in to ease the impact of severe fluctuations on the Portfolio Return On Investment (ROI).\n",
         "\n",
-        "This exercise was an opportunity to implements this strategy that seems profitable in such crazy moved market even if this app can benefit from some further & additionnal features such as:\n",
+        "This exercise is a basic an implementation of this strategy (and seems to be profitable in such crazy moved market) wich can benefit from some further & additionnal features such as:\n",
         "\n",
-        "- Automatization of Asset choice given:\n",
+        "- Automatization of Asset selection given:\n",
         "\n",
-        "  * Initial Investment\n",
-        "  * Investment horizon\n",
-        "  * Competing market parameters (Interest rate...)\n",
+        "  * Initial Investment.\n",
+        "  * Investment horizon.\n",
+        "  * Competing market parameters (Interest rate...).\n",
+        "\n",
+        "  To include differents types of assets.\n",
         "\n",
         "- Including insights from forcasting methods of:\n",
         "\n",
-        "  * Macro economic data\n",
-        "  * Trading market index (S&P500 and more...)"
+        "  * Macro economic data (Gloable/Regional/Local scoop).\n",
+        "  * Different Historical Market Data."
       ],
       "metadata": {
         "id": "wNjdpHwXG5nh"
