--- a/crypto_portfolio_optimization.ipynb
+++ b/crypto_portfolio_optimization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPHT9QtNdAesqU4qxwbczyA"
+      "authorship_tag": "ABX9TyOmGTIKE/P2fwrwFkCk16mj"
     },
     "kernelspec": {
       "name": "python3",
@@ -3215,10 +3215,6 @@
         "    ef = EfficientFrontier(mu, S)\n",
         "    weights = ef.max_sharpe(risk_free_rate= safe)\n",
         "    cleaned_weights = ef.clean_weights()\n",
-        "    # optimized_portfolio = pd.DataFrame([i for i in zip(cleaned_weights.keys(), \n",
-        "    #                                                    cleaned_weights.values())], \n",
-        "    #                                                    columns=['Tickers','Ratio'])\n",
-        "    # return optimized_portfolio\n",
         "    return [round(i, 2) for i in cleaned_weights.values()]\n",
         "\n",
         "def benchmark_ratios(selected_tickers):\n",
@@ -3230,7 +3226,6 @@
         "     '''\n",
         "     return pd.DataFrame([i for i in zip(selected_tickers,\n",
         "                                         [(1/len(selected_tickers)) for i in (selected_tickers)])])\n",
-        "## Optimized Ratios pieplot\n",
         "def pie_plot(data):\n",
         "    '''\n",
         "    Pie Plot of the calculated ratios of selected tickers\n",
@@ -3244,7 +3239,6 @@
         "         color=alt.Color(field=\"Tickers\", type=\"nominal\"))\n",
         "    return pie_fig\n",
         "\n",
-        "## func lineplot daily&cumul_daily returns in %\n",
         "def plot_ret(returns):\n",
         "    '''\n",
         "    generate a line plot of calculated returns in %\n",
@@ -3263,9 +3257,6 @@
         "    ))\n",
         "    return fig\n",
         "\n",
-        "\n",
-        "# Benchmark Section\n",
-        "# Cumulative Revenues Comparaison to end_date\n",
         "def h_bar(opt_rslts, ben_rslts):\n",
         "    '''\n",
         "     Plot a horizontal bar plot of the investment cumulative gain/loss\n",
@@ -3279,6 +3270,7 @@
         "        color=alt.Color(field=\"Scenarios\", type=\"nominal\", legend=None)\n",
         "    )\n",
         "\n",
+        "#main application function\n",
         "def app_exec():\n",
         "    '''\n",
         "    main application function\n",
